ProjetCompil/Verif/Test/fail/affArrayType.cas
program
   A : array [1..5] of integer;
   B : array [1..5] of real;
begin
   A := B;
end.